SONAR-17136 Replace JSW with nohup for Linux & MacOS